--- a/gitlab-omnibus/charts/gitlab-runner/templates/deployment.yaml
+++ b/gitlab-omnibus/charts/gitlab-runner/templates/deployment.yaml
@@ -10,6 +10,9 @@ metadata:
     heritage: "{{ .Release.Service }}"
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: {{ template "fullname" . }}
   template:
     metadata:
       labels:
