--- a/gitlab-omnibus/templates/gitlab/redis-deployment.yaml
+++ b/gitlab-omnibus/templates/gitlab/redis-deployment.yaml
@@ -9,6 +9,10 @@ metadata:
     heritage: "{{ .Release.Service }}"
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      name: {{ template "redis.fullname" . }}
+      app: {{ template "fullname" . }}
   template:
     metadata:
       labels:
