--- a/gitlab-omnibus/templates/load-balancer/lego/deployment.yaml
+++ b/gitlab-omnibus/templates/load-balancer/lego/deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: kube-lego
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: kube-lego
   template:
     metadata:
       labels:
